--- a/src/css/Promo.css
+++ b/src/css/Promo.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     background: linear-gradient(rgba(244, 235, 220, 0.7), rgba(244, 235, 220, 0.7)),
-        url('../assets/paper.jpg');
+        url('https://i.imgur.com/kvoHqmc.jpg');
 
     background-size: cover;
     background-blend-mode: multiply;
@@ -68,7 +68,7 @@
     height: 50%;
     background:
         linear-gradient(rgba(255, 154, 26, 0.9), rgba(255, 154, 26, 0.9)),
-        url('../assets/paper.jpg');
+        url('https://i.imgur.com/kvoHqmc.jpg');
     background-size: cover;
     background-blend-mode: multiply;
     border-top-right-radius: 50px;
